[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lastfm_monitor"
version = "2.4.3"
description = "Track Last.fm listening activity in real time with Spotify integration, automated playback, scrobble history and instant notifications"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "Michal Szymanski", email = "misiektoja-pypi@rm-rf.ninja" }]
requires-python = ">=3.9"
dependencies = [
  "pylast>=5.2.0",
  "requests>=2.0",
  "python-dateutil>=2.8",
  "spotipy>=2.24.0",
  "python-dotenv>=0.19",
  "beautifulsoup4>=4.9.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
]
keywords = ["lastfm", "monitoring", "tracking", "real-time", "osint", "pylast", "spotipy"]

[project.urls]
Homepage = "https://github.com/misiektoja/lastfm_monitor"
Source   = "https://github.com/misiektoja/lastfm_monitor"
Changelog= "https://github.com/misiektoja/lastfm_monitor/blob/main/RELEASE_NOTES.md"

[project.scripts]
lastfm_monitor = "lastfm_monitor:main"

[tool.setuptools]
py-modules = ["lastfm_monitor"]
include-package-data = true
